@@ -5,15 +5,16 @@ To do:
 	- link port is broken (HW2 only ?!)
 	- stealth I/O and mem protect (done but not enabled)
 
-- 19/01/2005, version 1.80k: roms
+- 20/01/2005, version 1.80k: roms
 	- link port is now reset when error occurs: great improvement
 	- added support of EA bit ($60000D:2): Titanium work
 	- clean-up of linkport support (no more hack)
 	- fixed linkport progress bars
+	- boosted linkport speed (direct file)
 
 - 12/01/2005, version 1.80j: roms
 	- rewrite of the m68k loop:
-		* UAE fixedto handle multiple pending interrupts and some other fixes
+		* UAE fixed to handle multiple pending interrupts and some other fixes
 		* idle mode and STOP improved but problems with ON key
 	- fixed grayscale routines: they are now rock-stable !
 	- fixed grayscales with HW2
